# glimpse-o-matic

./: .gitignore  Cargo.toml  README.md  about.html  build.ps1  feedback.md  index.html  main.css  main.js  notes_and_status.md  server.py  watermarking.md  white_paper.md  white_paper_notes.md
glimr/: Cargo.toml
glimr/src/: lib.rs  watermark.rs
pkg/: glimr.d.ts  glimr.js  glimr_bg.wasm  glimr_bg.wasm.d.ts  package.json
tests/: blind_sweep.yaml
tests/fixtures/: captions.yaml
tests/reports/: blind_auto_sweep.md  brute_scale.md  channel_waterfall.md  cliff_error_profile.md  registration_stage1.md  registration_stage2.md  scale_peak_ranks.md  scale_precision.md  source_size_floor.md  subbin_precision.md  sync_mechanism.md
tools/deployg/: Cargo.toml
tools/deployg/src/: cloudflare.rs  main.rs  s3.rs  sigv4.rs
tools/packg/: Cargo.toml
tools/packg/src/: main.rs
tools/social_preview/: index.html  main.js  style.css
tools/watermark-decode/: Cargo.toml
tools/watermark-decode/src/: main.rs
tools/watermark-decode/tests/: integration.rs
