[package]
name = "watermark-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
glimr = { path = "../../glimr" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rayon = "1"
ctrlc = "3"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
