[package]
name = "watermark-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
glimr = { path = "../../glimr", features = ["registration"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
