[package]
name = "watermark-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
glimr = { path = "../../glimr", features = ["registration"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
serde_yaml = "0.9"   # read tests/fixtures/captions.yaml for canonical-fixture selection
